--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -21,9 +21,6 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-
-
-
         <activity
             android:name=".New"
             android:label="@string/app_name" >
@@ -36,6 +33,10 @@
         <activity
             android:name=".ActivityHome"
             android:label="@string/title_activity_activity_home" >
+        </activity>
+        <activity
+            android:name=".Kunal"
+            android:label="@string/title_activity_kunal" >
         </activity>
 
     </application>
